--- a/Week 1/Work/Coloft/styles.css
+++ b/Week 1/Work/Coloft/styles.css
@@ -4,11 +4,16 @@
 }
 
 body {
-    background-color: black;
+    background-color: green;
 }
 
 header {
+    -webkit-box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.75);
+    -moz-box-shadow:    0px 5px 10px 0px rgba(50, 50, 50, 0.75);
+    box-shadow:         0px 5px 10px 0px rgba(50, 50, 50, 0.75);
+
     background-color: white;
+    height: 115px;
 }
 
 .social {
@@ -44,18 +49,49 @@ header {
 
 nav {
     background-color: #AA1801;
+    height: 60px;
+    position: relative;
 }
 
 nav img {
     display: inline-block;
+    margin-top: -15px;
+    position: absolute;
+}
+
+nav form {
+    background-color: #911402;
+    border-radius: 15px;
+    color: orange;
+    float: left;
+    margin-left: 150px;
+    margin-top: 15px;
+    padding: 5px 10px;
+}
+
+nav form input {
+    background-color: inherit;
+    border: none;
+    color: #ffffff;
+    outline: none;
 }
 
 nav ul {
     display: inline-block;
+    float: right;
+    height: 100%;
 }
 
 nav ul li {
-    display: inline-block;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+    box-shadow: 1px 0 rgba(255, 255, 255, 0.1) inset;
+    float: left;
+    height: 100%;
+    list-style: none;
+}
+
+nav ul li:first-child, nav ul li:last-child {
+    box-shadow: none;
 }
 
 nav ul li.login {
@@ -68,7 +104,22 @@ nav ul li.edition {
 
 nav ul li a {
     color: white;
+    display: block;
     font-family: sans-serif;
-    padding: 10px 15px;
+    height: 100%;
+    line-height: 60px;
+    padding: 0 15px;
     text-decoration: none;
+}
+
+nav ul li a:hover {
+    background-color: #981500;
+}
+
+nav ul li.login a:hover, nav ul li.edition a:hover {
+    background-color: #F36A02;
+}
+
+.landing_articles article {
+    color: white;
 }
