--- a/Week 1/Work/Coworks/styles.css
+++ b/Week 1/Work/Coworks/styles.css
@@ -1,13 +1,71 @@
+/*
+font-family: 'Open Sans', sans-serif;
+ */
+
 * {
     margin: 0;
     padding: 0;
 }
 
-body {
-    background-color: black;
-}
-
 header {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+
     background-color: white;
     padding: 20px;
+    min-width: 1000px;
+}
+
+header nav {
+    float: right;
+}
+
+header nav ul li {
+    display: inline-block;
+    font-family: 'Lobster', cursive;
+    list-style: none;
+    padding: 0 15px;
+}
+
+header nav ul li a {
+    color: #886e42;
+    text-decoration: none;
+}
+
+header nav ul li a:hover {
+    color: red;
+}
+
+header nav ul li:first-child a {
+    color: blue;
+}
+
+header nav ul li:first-child a:hover {
+    color: green;
+}
+
+.wrapper {
+    margin: 0 auto;
+    width: 1000px;
+}
+
+@media only screen and (max-width: 30em) {
+    .wrapper {
+        width: 100%;
+    }
+}
+
+.content section h1 {
+    font-size: 36px;
+    font-family: sans-serif;
+}
+
+.content section .news article {
+    margin: 20px 0;
+}
+
+.content section .news article h1 {
+    font-weight: normal;
+    margin-bottom: 10px;
 }
